tests/lean/byStrictIndent.lean.expected.out
byStrictIndent.lean:3:2: error: expected '{' or indented tactic sequence
byStrictIndent.lean:2:25-2:27: error: unsolved goals
n : Nat
h : n > 0
⊢ n > 1
byStrictIndent.lean:1:62-2:27: error: unsolved goals
n : Nat
h : n > 0
helper : n > 1
⊢ n > 1
byStrictIndent.lean:7:54-9:9: error: unsolved goals
n : Nat
h : n > 0
helper : n > 1
⊢ n > 1
byStrictIndent.lean:10:3-10:8: error: unexpected token 'sorry'; expected command
byStrictIndent.lean:13:54-15:9: error: unsolved goals
n : Nat
h : n > 0
helper : n > 1
⊢ n > 1
byStrictIndent.lean:16:6-16:11: error: unexpected token 'sorry'; expected command
